# AI-Data-Lake-API

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
app/: api.py
app/repositories/: local_storage.py  s3_repository.py  s3_storage.py  storage_interface.py
app/router/: datasets.py
app/routers/: datasets.py
app/services/: dataset_service.py
storage/datasets/: clientes.json  produtos.json
