[project]
name = "api-data-lake-ai"
version = "0.1.0"   
description = "A data lake for AI using FastApi, AWS and Pandas"
requires-python = ">=3.11"

dependencies = [
    "fastapi[standard]==0.110.0",
    "uvicorn[standard]==0.27.1",
    "boto3",
    "botocore",
    "pandas",
    "numpy",
    "python-multipart",
    "python-dotenv",
    "loguru",
    "tenacity",
    "httpx"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]